// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Convert a author using entity 1`] = `
Object {
  "_links": Object {
    "collection": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/users",
      },
    ],
    "self": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/users/4",
      },
    ],
  },
  "avatar_urls": Object {
    "24": "https://secure.gravatar.com/avatar/eebc7d67bdc645559fd6634e0335a42b?s=24&d=mm&r=g",
    "48": "https://secure.gravatar.com/avatar/eebc7d67bdc645559fd6634e0335a42b?s=48&d=mm&r=g",
    "96": "https://secure.gravatar.com/avatar/eebc7d67bdc645559fd6634e0335a42b?s=96&d=mm&r=g",
  },
  "description": "Alan is a WordPress enthusiast who enjoys travelling, music and pizza.",
  "id": 4,
  "link": "/author/alan/",
  "meta": Object {},
  "name": "Alan Martin",
  "slug": "alan",
  "url": "",
}
`;

exports[`Convert a category using entity 1`] = `
Object {
  "_links": Object {
    "about": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/taxonomies/category",
      },
    ],
    "collection": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/categories",
      },
    ],
    "curies": Array [
      Object {
        "href": "https://api.w.org/{rel}",
        "name": "wp",
        "templated": true,
      },
    ],
    "self": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/categories/7",
      },
    ],
    "wp:post_type": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/posts?categories=7",
      },
    ],
  },
  "count": 10,
  "description": "",
  "id": 7,
  "link": "/wp-cat/nature/",
  "meta": Object {},
  "name": "Nature",
  "parent": 0,
  "slug": "nature",
  "taxonomy": "category",
  "yoast_meta": Object {
    "title": "Nature Archives - Demo Worona",
  },
}
`;

exports[`Convert a latest taxonomy using entity 1`] = `
Object {
  "count": 1,
  "id": "movie",
  "link": "/aaa/?post_type=movie",
  "name": "Movies",
  "slug": "movie",
  "taxonomy": "latest",
  "yoast_meta": Object {
    "title": "Movies aarchivesss | Demo Worona",
  },
}
`;

exports[`Convert a page using entity and ignore subpages 1`] = `
Object {
  "_embedded": Object {
    "author": Array [
      1,
    ],
    "up": Array [
      Object {
        "_links": Object {
          "about": Array [
            Object {
              "href": "https://demo.worona.org/wp-json/wp/v2/types/page",
            },
          ],
          "author": Array [
            Object {
              "embeddable": true,
              "href": "https://demo.worona.org/wp-json/wp/v2/users/6",
            },
          ],
          "collection": Array [
            Object {
              "href": "https://demo.worona.org/wp-json/wp/v2/pages",
            },
          ],
          "curies": Array [
            Object {
              "href": "https://api.w.org/{rel}",
              "name": "wp",
              "templated": true,
            },
          ],
          "replies": Array [
            Object {
              "embeddable": true,
              "href": "https://demo.worona.org/wp-json/wp/v2/comments?post=211",
            },
          ],
          "self": Array [
            Object {
              "href": "https://demo.worona.org/wp-json/wp/v2/pages/211",
            },
          ],
          "version-history": Array [
            Object {
              "href": "https://demo.worona.org/wp-json/wp/v2/pages/211/revisions",
            },
          ],
          "wp:attachment": Array [
            Object {
              "href": "https://demo.worona.org/wp-json/wp/v2/media?parent=211",
            },
          ],
          "wp:term": Array [
            Object {
              "embeddable": true,
              "href": "https://demo.worona.org/wp-json/wp/v2/latest?page=211",
              "taxonomy": "latest",
            },
          ],
        },
        "author": 6,
        "date": "2017-06-27T10:10:25",
        "excerpt": Object {
          "protected": false,
          "rendered": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. &nbsp;</p>
",
        },
        "id": 211,
        "latest": Array [
          "page",
        ],
        "link": "https://demo.worona.org/audio-test/",
        "slug": "audio-test",
        "title": Object {
          "rendered": "Audio TEST",
        },
        "type": "page",
        "yoast_meta": Object {
          "title": "Audio TEST - Demo Worona",
        },
      },
    ],
  },
  "_links": Object {
    "about": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/types/page",
      },
    ],
    "author": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/users/1",
      },
    ],
    "collection": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/pages",
      },
    ],
    "curies": Array [
      Object {
        "href": "https://api.w.org/{rel}",
        "name": "wp",
        "templated": true,
      },
    ],
    "replies": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/comments?post=184",
      },
    ],
    "self": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/pages/184",
      },
    ],
    "up": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/pages/211",
      },
    ],
    "version-history": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/pages/184/revisions",
      },
    ],
    "wp:attachment": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/media?parent=184",
      },
    ],
    "wp:term": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/latest?page=184",
        "taxonomy": "latest",
      },
    ],
  },
  "author": 1,
  "comment_status": "closed",
  "content": Object {
    "protected": false,
    "rendered": "<h5>If you are just curious about our story you&#8217;re in the right spot 🙂</h5>
<p>This site features articles on cities in Europe and around the world. We’re passionate about travelling— doing something fun, seeing cool things, and meeting different people.</p>
<blockquote><p>“Twenty years from now you will be more disappointed by the things you didn’t do than by the ones you did do.” – Mark Twain</p></blockquote>
<p><img class=\\"alignnone size-full wp-image-185\\" src=\\"https://demo.worona.org/wp-content/uploads/2017/03/pexels-photo-297755.png\\" alt=\\"about-us-team\\" width=\\"700\\" height=\\"458\\" srcset=\\"https://demo.worona.org/wp-content/uploads/2017/03/pexels-photo-297755.png 700w, https://demo.worona.org/wp-content/uploads/2017/03/pexels-photo-297755-300x196.png 300w\\" sizes=\\"(max-width: 700px) 85vw, 700px\\" /></p>
<h6><em>Alan Martin</em></h6>
<p>Alan is a blogger and WordPress enthusiast. He loves travelling, music and pizza. Check out his latest post about <a href=\\"https://demo.worona.org/sunrise-at-phu-quoc-island/\\">Phú Quốc Island (Vietnam)</a>.</p>
<h6><em>Reyes Martínez</em></h6>
<p>Reyes loves travelling, photography and writing. Don&#8217;t miss her latest post about the amazing <a href=\\"https://demo.worona.org/small-and-picturesque-french-villages/\\">Picturesque French Villages</a>.</p>
<h6><em>Luis Herranz</em></h6>
<p>Luis is an entrepreneur that enjoys travelling and reading. In his latest post, he writes about India and The <a href=\\"https://demo.worona.org/latest-trip-to-india/\\">Taj Mahal</a>, one of the universally admired masterpieces of the world’s heritage.</p>
<p><img class=\\"alignnone size-full wp-image-193\\" src=\\"https://demo.worona.org/wp-content/uploads/2017/03/road-trip.png\\" alt=\\"road-trip\\" width=\\"700\\" height=\\"467\\" srcset=\\"https://demo.worona.org/wp-content/uploads/2017/03/road-trip.png 700w, https://demo.worona.org/wp-content/uploads/2017/03/road-trip-300x200.png 300w\\" sizes=\\"(max-width: 700px) 85vw, 700px\\" /></p>
<p>This is just a demo blog, but you might want to check out some of the really good travel bloggers out there:</p>
<ul>
<li><strong>Nomadic Matt</strong>. Each month over 1.000.000 people use his advice to travel better, cheaper, and longer.</li>
<li><strong>Expert Vagabond</strong> by Matt &#8211; adventure travel photographer and professional blogger.</li>
<li><strong>The Aussie Nomad</strong> by Chris. He has been living abroad as an expat and exploring the world since the beginning of 2010.</li>
</ul>
<p>You can see the full list of top travel blogs <a href=\\"http://www.theexpeditioner.com/the-top-50-travel-blogs/\\">here</a>.</p>
<h4>See you down the road!</h4>
<p><iframe style=\\"border: 0;\\" src=\\"https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31758.896101501236!2d13.36989231715827!3d52.510655459236325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e373f035901%3A0x42120465b5e3b70!2sBerl%C3%ADn%2C+Alemania!5e0!3m2!1ses!2ses!4v1490629160374\\" width=\\"600\\" height=\\"450\\" frameborder=\\"0\\" allowfullscreen=\\"allowfullscreen\\"></iframe></p>
",
  },
  "date": "2017-03-27T15:09:22",
  "date_gmt": "2017-03-27T15:09:22",
  "excerpt": Object {
    "protected": false,
    "rendered": "<p>If you are just curious about our story you&#8217;re in the right spot 🙂 This site features articles on cities in Europe and around the world. We’re passionate about travelling— doing something fun, seeing cool things, and meeting different people. “Twenty years from now you will be more disappointed by the things you didn’t do &hellip; <a href=\\"https://demo.worona.org/audio-test/about-us/\\" class=\\"more-link\\">Continue reading<span class=\\"screen-reader-text\\"> &#8220;About us&#8221;</span></a></p>
",
  },
  "featured_media": 0,
  "guid": Object {
    "rendered": "https://demo.worona.org/?page_id=184",
  },
  "id": 184,
  "latest": Array [
    "page",
  ],
  "link": "/audio-test/about-us/",
  "menu_order": 0,
  "meta": Object {},
  "modified": "2018-03-23T15:35:51",
  "modified_gmt": "2018-03-23T15:35:51",
  "parent": 211,
  "ping_status": "closed",
  "slug": "about-us",
  "template": "",
  "title": Object {
    "rendered": "About us",
  },
  "type": "page",
  "yoast_meta": Object {
    "title": "About us - Demo Worona",
  },
}
`;

exports[`Convert a post type using entity 1`] = `
Object {
  "_links": Object {
    "collection": Array [
      Object {
        "href": "http://test.frontity.io/wp-json/wp/v2/types",
      },
    ],
    "curies": Array [
      Object {
        "href": "https://api.w.org/{rel}",
        "name": "wp",
        "templated": true,
      },
    ],
    "wp:items": Array [
      Object {
        "href": "http://test.frontity.io/wp-json/wp/v2/posts",
      },
    ],
  },
  "description": "",
  "hierarchical": false,
  "name": "Posts",
  "rest_base": "posts",
  "slug": "post",
  "taxonomies": Array [
    "category",
    "tag",
  ],
}
`;

exports[`Convert a tag using entity 1`] = `
Object {
  "_links": Object {
    "about": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/taxonomies/post_tag",
      },
    ],
    "collection": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/tags",
      },
    ],
    "curies": Array [
      Object {
        "href": "https://api.w.org/{rel}",
        "name": "wp",
        "templated": true,
      },
    ],
    "self": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/tags/10",
      },
    ],
    "wp:post_type": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/posts?tags=10",
      },
    ],
  },
  "count": 1,
  "description": "",
  "id": 10,
  "link": "/tag/gullfoss/",
  "meta": Object {},
  "name": "Gullfoss",
  "slug": "gullfoss",
  "taxonomy": "tag",
  "yoast_meta": Object {
    "title": "Gullfoss Archives - Demo Worona",
  },
}
`;

exports[`Convert an attachment using entity 1`] = `
Object {
  "_embedded": Object {
    "author": Array [
      2,
    ],
  },
  "_links": Object {
    "about": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/types/attachment",
      },
    ],
    "author": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/users/2",
      },
    ],
    "collection": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/media",
      },
    ],
    "curies": Array [
      Object {
        "href": "https://api.w.org/{rel}",
        "name": "wp",
        "templated": true,
      },
    ],
    "replies": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/comments?post=193",
      },
    ],
    "self": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/media/193",
      },
    ],
    "wp:term": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/latest?attachment=193",
        "taxonomy": "latest",
      },
    ],
  },
  "alt_text": "road-trip",
  "author": 2,
  "caption": "",
  "comment_status": "open",
  "date": "2017-03-27T15:23:51",
  "date_gmt": "2017-03-27T15:23:51",
  "description": "",
  "guid": Object {
    "rendered": "https://demo.worona.org/wp-content/uploads/2017/03/road-trip.png",
  },
  "id": 193,
  "latest": Array [
    "attachment",
  ],
  "link": "/audio-test/about-us/road-trip/",
  "media_details": Object {
    "file": "2017/03/road-trip.png",
    "height": 467,
    "image_meta": Object {
      "aperture": "0",
      "camera": "",
      "caption": "",
      "copyright": "",
      "created_timestamp": "0",
      "credit": "",
      "focal_length": "0",
      "iso": "0",
      "keywords": Array [],
      "orientation": "0",
      "shutter_speed": "0",
      "title": "",
    },
    "sizes": Object {
      "full": Object {
        "file": "road-trip.png",
        "height": 467,
        "mime_type": "image/png",
        "source_url": "https://demo.worona.org/wp-content/uploads/2017/03/road-trip.png",
        "width": 700,
      },
      "medium": Object {
        "file": "road-trip-300x200.png",
        "height": 200,
        "mime_type": "image/png",
        "source_url": "https://demo.worona.org/wp-content/uploads/2017/03/road-trip-300x200.png",
        "width": 300,
      },
      "thumbnail": Object {
        "file": "road-trip-150x150.png",
        "height": 150,
        "mime_type": "image/png",
        "source_url": "https://demo.worona.org/wp-content/uploads/2017/03/road-trip-150x150.png",
        "width": 150,
      },
    },
    "width": 700,
  },
  "media_type": "image",
  "meta": Object {},
  "mime_type": "image/png",
  "modified": "2017-03-27T15:23:58",
  "modified_gmt": "2017-03-27T15:23:58",
  "ping_status": "closed",
  "post": 184,
  "slug": "road-trip",
  "source_url": "https://demo.worona.org/wp-content/uploads/2017/03/road-trip.png",
  "title": Object {
    "rendered": "road-trip",
  },
  "type": "attachment",
  "yoast_meta": Object {
    "title": "road-trip - Demo Worona",
  },
}
`;

exports[`Convert post using entity 1`] = `
Object {
  "_embedded": Object {
    "author": Array [
      4,
    ],
    "replies": Array [
      Array [
        Object {
          "_links": Object {
            "author": Array [
              Object {
                "embeddable": true,
                "href": "https://demo.worona.org/wp-json/wp/v2/users/2",
              },
            ],
            "collection": Array [
              Object {
                "href": "https://demo.worona.org/wp-json/wp/v2/comments",
              },
            ],
            "self": Array [
              Object {
                "href": "https://demo.worona.org/wp-json/wp/v2/comments/5",
              },
            ],
            "up": Array [
              Object {
                "embeddable": true,
                "href": "https://demo.worona.org/wp-json/wp/v2/posts/60",
                "post_type": "post",
              },
            ],
          },
          "author": 2,
          "author_avatar_urls": Object {
            "24": "https://secure.gravatar.com/avatar/485a5c16c5e51ffad6e76c48fd0cb88b?s=24&d=mm&r=g",
            "48": "https://secure.gravatar.com/avatar/485a5c16c5e51ffad6e76c48fd0cb88b?s=48&d=mm&r=g",
            "96": "https://secure.gravatar.com/avatar/485a5c16c5e51ffad6e76c48fd0cb88b?s=96&d=mm&r=g",
          },
          "author_name": "Reyes Martinez",
          "author_url": "http://www.worona.org",
          "content": Object {
            "rendered": "<p>Nice post, Alan! Iceland must be amazing. Thanks for sharing 🙂</p>
",
          },
          "date": "2017-01-13T16:10:43",
          "id": 5,
          "link": "https://demo.worona.org/the-beauties-of-gullfoss/#comment-5",
          "parent": 0,
          "type": "comment",
        },
      ],
    ],
    "wp:contentmedia": Array [
      Array [
        118,
        95,
        84,
        70,
        62,
        13,
      ],
    ],
    "wp:featuredmedia": Array [
      62,
    ],
    "wp:term": Array [
      Array [
        3,
        8,
      ],
      Array [
        10,
        9,
        13,
        11,
      ],
      Array [
        "post",
      ],
    ],
  },
  "_links": Object {
    "about": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/types/post",
      },
    ],
    "author": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/users/4",
      },
    ],
    "collection": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/posts",
      },
    ],
    "curies": Array [
      Object {
        "href": "https://api.w.org/{rel}",
        "name": "wp",
        "templated": true,
      },
    ],
    "replies": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/comments?post=60",
      },
    ],
    "self": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/posts/60",
      },
    ],
    "version-history": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/posts/60/revisions",
      },
    ],
    "wp:attachment": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/media?parent=60",
      },
    ],
    "wp:contentmedia": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/media?include=70,62,84,13,95,118",
      },
    ],
    "wp:featuredmedia": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/media/62",
      },
    ],
    "wp:term": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/categories?post=60",
        "taxonomy": "category",
      },
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/tags?post=60",
        "taxonomy": "post_tag",
      },
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/latest?post=60",
        "taxonomy": "latest",
      },
    ],
  },
  "author": 4,
  "categories": Array [
    3,
    8,
  ],
  "comment_status": "open",
  "content": Object {
    "protected": false,
    "rendered": "<p>Gullfoss is a waterfall located in the canyon of the Hvítá river in southwest Iceland.</p> <p><a href=\\"https://en.wikipedia.org/wiki/Gullfoss\\">Gullfoss</a> is one of the most popular <a href=\\"https://demo.worona.org/iceland/\\">tourist attractions in Iceland</a>. The wide Hvítá rushes southward, and about a kilometre above the falls it turns sharply to the right and flows down into a wide curved three-step “staircase” and then abruptly plunges in two stages (11 metres or 36 feet, and 21 metres or 69 feet) into a crevice 32 metres (105 ft) deep. The crevice, about 20 metres (66 ft) wide and 2.5 kilometres (1.6 mi) in length, extends perpendicular to the flow of the river. The average amount of water running down the waterfall is 140 cubic metres (4,900 cu ft) per second in the summer and 80 cubic metres (2,800 cu ft) per second in the winter. The <a href=\\"https://demo.worona.org/sample-page/\\">highest flood</a> measured was 2,000 cubic metres (71,000 cu ft) per second.</p> <h3>An iconic waterfall of Iceland</h3> <figure id=\\"attachment_70\\" style=\\"width:840px;\\" class=\\"wp-caption alignnone\\"><img class=\\"wp-image-70 size-large\\" src=\\"https://demo.worona.org/wp-content/uploads/2016/11/Gullfoss-1024x577.jpg\\" alt=\\"gullfoss\\" width=\\"840\\" height=\\"473\\" data-attachment-id=\\"70\\"><figcaption class=\\"wp-caption-text\\">Gullfoss, an iconic waterfall of Iceland.</figcaption></figure>  <div class=\\"4\\">During the first half of the 20th century and some years into the late 20th century, there was much speculation about using Gullfoss to generate electricity. During this period, the waterfall was rented indirectly by its owners, Tómas Tómasson and Halldór Halldórsson, to foreign investors. However, the investors’ attempts were unsuccessful, partly due to lack of money. The waterfall was later sold to the state of Iceland, and is now protected.</div>  <blockquote> <p style=\\"text-align:left;\\">Iceland is not a destination. It’s an adventure set in stunning scenery.</p> </blockquote> <p>Sigríður Tómasdóttir, the daughter of Tómas Tómasson, was determined to preserve the waterfall’s condition and even threatened to throw herself down. Although it is widely believed, the very popular story that Sigríður saved the waterfall from exploitation is untrue. <a href=\\"http://www.nat.is/travelguideeng/gullfoss_sigridur_tomasdottir.htm\\">A stone memorial to Sigriður</a>, located above the falls, depicts her profile.</p> <p><iframe width=\\"840\\" height=\\"473\\" src=\\"https://www.youtube.com/embed/3bUtvUAeX8s?feature=oembed\\" frameborder=\\"0\\" allowfullscreen></iframe></p>  <ul><li><a title=\\"Geography of Iceland\\" href=\\"https://en.wikipedia.org/wiki/Geography_of_Iceland\\">Geography of Iceland</a></li> <li><a title=\\"Iceland plume\\" href=\\"https://en.wikipedia.org/wiki/Iceland_plume\\">Iceland plume</a></li> <li><a title=\\"List of lakes of Iceland\\" href=\\"https://en.wikipedia.org/wiki/List_of_lakes_of_Iceland\\">List of lakes of Iceland</a></li> <li><a class=\\"mw-redirect\\" title=\\"List of islands off Iceland\\" href=\\"https://en.wikipedia.org/wiki/List_of_islands_off_Iceland\\">List of islands off Iceland</a></li> <li><a title=\\"List of volcanoes in Iceland\\" href=\\"https://en.wikipedia.org/wiki/List_of_volcanoes_in_Iceland\\">List of volcanoes in Iceland</a></li> <li><a title=\\"List of waterfalls\\" href=\\"https://en.wikipedia.org/wiki/List_of_waterfalls\\">List of waterfalls</a></li> <li><a title=\\"List of rivers of Iceland\\" href=\\"https://en.wikipedia.org/wiki/List_of_rivers_of_Iceland\\">List of rivers of Iceland</a></li> <li><a class=\\"mw-redirect\\" title=\\"Volcanism in Iceland\\" href=\\"https://en.wikipedia.org/wiki/Volcanism_in_Iceland\\">Volcanism in Iceland</a></li> <li><a class=\\"mw-redirect\\" title=\\"Waterfalls of Iceland\\" href=\\"https://en.wikipedia.org/wiki/Waterfalls_of_Iceland\\">Waterfalls of Iceland</a></li> </ul>  <p>Source: <a href=\\"https://en.wikipedia.org/wiki/Gullfoss\\">Gullfoss</a>.<br> Category: <a href=\\"https://demo.worona.org/wp-cat/travel/\\">Travel</a></p> <blockquote class=\\"twitter-tweet\\"><p lang=\\"en\\" dir=\\"ltr\\">Exploring Iceland <a href=\\"https://t.co/G5c2iVAKHg\\">pic.twitter.com/G5c2iVAKHg</a></p> <p>— Traveling Ideas (@Travel_Places_) <a href=\\"https://twitter.com/Travel_Places_/status/911998747198009344?ref_src=twsrc%5Etfw\\">September 24, 2017</a></p></blockquote>   <blockquote class=\\"instagram-media\\" style=\\"background:#FFF;border:0;margin:1px;max-width:658px;padding:0;width:99.375%;\\"><div style=\\"padding:8px;\\"> <div style=\\"background:#F8F8F8;line-height:0;margin-top:40px;padding:50% 0;text-align:center;width:100%;\\">  </div> <p style=\\"margin:8px 0 0 0;padding:0 4px;\\"> <a href=\\"https://www.instagram.com/p/BdqJaLiAYfe/\\" style=\\"color:#000;font-family:Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;line-height:17px;text-decoration:none;\\">Presents PHOTOGRAPHER | @sentinelphotography LOVES OF THE DAY January 7, 2018 LOCATION | #Gullfoss Waterfall SELECTED BY ADMIN | Linda – @photobylindamoelgaard OUR TAG | #LOVES_UNITED_SCANDINAVIA VISIT PARTNERS COMMUNITY: * @loves_united_family * @loves_united_life * @loves_united_denmark * @loves_united_norway * @loves_united_finland * @loves_united_copenhagen * @traveling__night * @rsa_light_ * @igworld_global * @ig_eternity * OUR MAIL | loves.members@gmail.com * #lo_un_sc_sentinelphotography * #l_u_t_c_e_2018_january _________________________________________ #bestofscandinavia #igscandinavia #visitscandinavia #nordic2day #unlimitedscandinavia #scandinavia #ig_week_scandinavia #loves_united_life #loves_united_europe #exceptional_pictures #allbeauty_addiction #marvelouz_world #igworld_global #earth_shotz #ig_eternity #thehub_landscape #loves_united_landscape #loves_united_earth #tv_landscapes #bns_landscape #planet_earth_shots #zonephotographer #magic_marvels #earth_deluxe #landscape #landscapelover</a></p> <p style=\\"color:#c9c8cd;font-family:Arial, sans-serif;font-size:14px;line-height:17px;margin-bottom:0;margin-top:8px;overflow:hidden;padding:8px 0 7px;text-align:center;white-space:nowrap;\\">A post shared by <a href=\\"https://www.instagram.com/loves_united_scandinavia/\\" style=\\"color:#c9c8cd;font-family:Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;line-height:17px;\\"> LOVES ☆  AMAZING SCANDINAVIA</a> (@loves_united_scandinavia) on Jan 7, 2018 at 10:37am PST</p> </div> </blockquote>  <div id=\\"gallery-1\\" class=\\"gallery galleryid-60 gallery-columns-3 gallery-size-thumbnail\\"><figure class=\\"gallery-item\\"><div class=\\"gallery-icon landscape\\"> 				<a href=\\"https://demo.worona.org/the-beauties-of-gullfoss/iceland-test/\\"><img width=\\"150\\" height=\\"150\\" src=\\"https://demo.worona.org/wp-content/uploads/2016/11/Iceland-test-150x150.jpg\\" class=\\"attachment-thumbnail size-thumbnail\\" alt=\\"iceland\\" data-attachment-id=\\"62\\"></a> 			</div></figure><figure class=\\"gallery-item\\"><div class=\\"gallery-icon landscape\\"> 				<a href=\\"https://demo.worona.org/sunrise-at-phu-quoc-island/pexels-photo-225203/\\"><img width=\\"150\\" height=\\"150\\" src=\\"https://demo.worona.org/wp-content/uploads/2016/11/pexels-photo-225203-150x150.jpeg\\" class=\\"attachment-thumbnail size-thumbnail\\" alt=\\"pexels-photo-225203\\" data-attachment-id=\\"84\\"></a> 			</div></figure><figure class=\\"gallery-item\\"><div class=\\"gallery-icon landscape\\"> 				<a href=\\"https://demo.worona.org/somewhere-in-romania/romania/\\"><img width=\\"150\\" height=\\"150\\" src=\\"https://demo.worona.org/wp-content/uploads/2016/11/Romania-150x150.jpg\\" class=\\"attachment-thumbnail size-thumbnail\\" alt=\\"romania\\" data-attachment-id=\\"13\\"></a> 			</div></figure><figure class=\\"gallery-item\\"><div class=\\"gallery-icon landscape\\"> 				<a href=\\"https://demo.worona.org/banff-national-park/national-park/\\"><img width=\\"150\\" height=\\"150\\" src=\\"https://demo.worona.org/wp-content/uploads/2016/11/national-park-150x150.jpg\\" class=\\"attachment-thumbnail size-thumbnail\\" alt=\\"national-park\\" data-attachment-id=\\"95\\"></a> 			</div></figure><figure class=\\"gallery-item\\"><div class=\\"gallery-icon landscape\\"> 				<a href=\\"https://demo.worona.org/switzerlands-mountains/lake/\\"><img width=\\"150\\" height=\\"150\\" src=\\"https://demo.worona.org/wp-content/uploads/2016/11/lake-150x150.jpg\\" class=\\"attachment-thumbnail size-thumbnail\\" alt=\\"lake\\" data-attachment-id=\\"118\\"></a> 			</div></figure></div>  ",
  },
  "content_media": Array [
    70,
    62,
    84,
    13,
    95,
    118,
  ],
  "date": "2016-11-25T18:31:11",
  "date_gmt": "2016-11-25T18:31:11",
  "excerpt": Object {
    "protected": false,
    "rendered": "<p>Gullfoss is a waterfall located in the canyon of the Hvítá river in southwest Iceland.</p>
",
  },
  "featured_media": 62,
  "format": "standard",
  "guid": Object {
    "rendered": "https://demo.worona.org/?p=60",
  },
  "id": 60,
  "latest": Array [
    "post",
  ],
  "link": "/the-beauties-of-gullfoss/",
  "meta": Object {
    "custom_field": "test value",
  },
  "modified": "2018-03-22T17:09:55",
  "modified_gmt": "2018-03-22T17:09:55",
  "ping_status": "open",
  "slug": "the-beauties-of-gullfoss",
  "sticky": false,
  "tags": Array [
    10,
    9,
    13,
    11,
  ],
  "title": Object {
    "rendered": "The Beauties of Gullfoss",
  },
  "type": "post",
  "yoast_meta": Object {
    "title": "The Beauties of Gullfoss - Demo Worona",
  },
}
`;

exports[`Convert post using entity 2`] = `
Object {
  "_links": Object {
    "about": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/types/attachment",
      },
    ],
    "author": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/users/2",
      },
    ],
    "collection": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/media",
      },
    ],
    "curies": Array [
      Object {
        "href": "https://api.w.org/{rel}",
        "name": "wp",
        "templated": true,
      },
    ],
    "replies": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/comments?post=62",
      },
    ],
    "self": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/media/62",
      },
    ],
    "wp:term": Array [
      Object {
        "embeddable": true,
        "href": "https://demo.worona.org/wp-json/wp/v2/latest?attachment=62",
        "taxonomy": "latest",
      },
    ],
  },
  "alt_text": "iceland",
  "author": 2,
  "content_media": Array [],
  "date": "2016-11-25T18:33:33",
  "id": 62,
  "latest": Array [
    "attachment",
  ],
  "link": "/the-beauties-of-gullfoss/iceland-test/",
  "media_details": Object {
    "file": "2016/11/Iceland-test.jpg",
    "height": 3025,
    "image_meta": Object {
      "aperture": "0",
      "camera": "",
      "caption": "",
      "copyright": "",
      "created_timestamp": "0",
      "credit": "",
      "focal_length": "0",
      "iso": "0",
      "keywords": Array [],
      "orientation": "0",
      "shutter_speed": "0",
      "title": "",
    },
    "sizes": Object {
      "full": Object {
        "file": "Iceland-test.jpg",
        "height": 3025,
        "mime_type": "image/jpeg",
        "source_url": "https://demo.worona.org/wp-content/uploads/2016/11/Iceland-test.jpg",
        "width": 5000,
      },
      "large": Object {
        "file": "Iceland-test-1024x620.jpg",
        "height": 620,
        "mime_type": "image/jpeg",
        "source_url": "https://demo.worona.org/wp-content/uploads/2016/11/Iceland-test-1024x620.jpg",
        "width": 1024,
      },
      "medium": Object {
        "file": "Iceland-test-300x182.jpg",
        "height": 182,
        "mime_type": "image/jpeg",
        "source_url": "https://demo.worona.org/wp-content/uploads/2016/11/Iceland-test-300x182.jpg",
        "width": 300,
      },
      "medium_large": Object {
        "file": "Iceland-test-768x465.jpg",
        "height": 465,
        "mime_type": "image/jpeg",
        "source_url": "https://demo.worona.org/wp-content/uploads/2016/11/Iceland-test-768x465.jpg",
        "width": 768,
      },
      "post-thumbnail": Object {
        "file": "Iceland-test-1200x726.jpg",
        "height": 726,
        "mime_type": "image/jpeg",
        "source_url": "https://demo.worona.org/wp-content/uploads/2016/11/Iceland-test-1200x726.jpg",
        "width": 1200,
      },
      "thumbnail": Object {
        "file": "Iceland-test-150x150.jpg",
        "height": 150,
        "mime_type": "image/jpeg",
        "source_url": "https://demo.worona.org/wp-content/uploads/2016/11/Iceland-test-150x150.jpg",
        "width": 150,
      },
    },
    "width": 5000,
  },
  "media_type": "image",
  "mime_type": "image/jpeg",
  "slug": "iceland-test",
  "source_url": "https://demo.worona.org/wp-content/uploads/2016/11/Iceland-test.jpg",
  "title": Object {
    "rendered": "iceland",
  },
  "type": "attachment",
  "yoast_meta": Object {
    "title": "iceland - Demo Worona",
  },
}
`;

exports[`Convert post using entity 3`] = `
Object {
  "_links": Object {
    "about": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/taxonomies/category",
      },
    ],
    "collection": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/categories",
      },
    ],
    "curies": Array [
      Object {
        "href": "https://api.w.org/{rel}",
        "name": "wp",
        "templated": true,
      },
    ],
    "self": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/categories/3",
      },
    ],
    "wp:post_type": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/posts?categories=3",
      },
    ],
  },
  "id": 3,
  "link": "/wp-cat/photography/",
  "name": "Photography",
  "slug": "photography",
  "taxonomy": "category",
  "yoast_meta": Object {
    "title": "Photography Archives - Demo Worona",
  },
}
`;

exports[`Convert post using entity 4`] = `
Object {
  "_links": Object {
    "about": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/taxonomies/post_tag",
      },
    ],
    "collection": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/tags",
      },
    ],
    "curies": Array [
      Object {
        "href": "https://api.w.org/{rel}",
        "name": "wp",
        "templated": true,
      },
    ],
    "self": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/tags/10",
      },
    ],
    "wp:post_type": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/posts?tags=10",
      },
    ],
  },
  "id": 10,
  "link": "/tag/gullfoss/",
  "name": "Gullfoss",
  "slug": "gullfoss",
  "taxonomy": "tag",
  "yoast_meta": Object {
    "title": "Gullfoss Archives - Demo Worona",
  },
}
`;

exports[`Convert post using entity 5`] = `
Object {
  "_links": Object {
    "collection": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/users",
      },
    ],
    "self": Array [
      Object {
        "href": "https://demo.worona.org/wp-json/wp/v2/users/4",
      },
    ],
  },
  "avatar_urls": Object {
    "24": "https://secure.gravatar.com/avatar/eebc7d67bdc645559fd6634e0335a42b?s=24&d=mm&r=g",
    "48": "https://secure.gravatar.com/avatar/eebc7d67bdc645559fd6634e0335a42b?s=48&d=mm&r=g",
    "96": "https://secure.gravatar.com/avatar/eebc7d67bdc645559fd6634e0335a42b?s=96&d=mm&r=g",
  },
  "description": "Alan is a WordPress enthusiast who enjoys travelling, music and pizza.",
  "id": 4,
  "link": "/author/alan/",
  "name": "Alan Martin",
  "slug": "alan",
  "url": "",
}
`;

exports[`Convert post using entity 6`] = `
Object {
  "count": 15,
  "id": "post",
  "link": "/",
  "name": "Demo Worona",
  "slug": "post",
  "taxonomy": "latest",
  "yoast_meta": Object {
    "title": "Demo Worona - Just another WordPress site",
  },
}
`;
